# 2026-spring-demo

./: CODEX.md  README.md  pyproject.toml
demos/: __init__.py
demos/bomberman/: README.md  __init__.py  ai.py  cli.py  config.py  engine.py  models.py  render.py  rules.py
demos/campus/: README.md  __init__.py  cli.py  config.py  engine.py  models.py  render.py  rules.py  scheduler.py
demos/civilization/: README.md  __init__.py  ai.py  cli.py  config.py  engine.py  models.py  render.py  rules.py
demos/gomoku/: README.md  __init__.py  ai.py  board.py  cli.py  config.py  engine.py  render.py  rules.py
docs/: notes.md
shared/: cli_app.py  cursor_input.py  grid_cursor.py  random_utils.py  text_render.py
tests/: test_bomberman.py  test_campus.py  test_civilization.py  test_gomoku.py  test_shared_input.py
